--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,9 @@
 name: Release
 
 on:
-  workflow_run:
-    workflows:
-      - Test
-    types:
-      - completed
+  push:
+    tags:
+      - "v*.*.*"
 
 jobs:
   build:
@@ -13,4 +11,3 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: softprops/action-gh-release@v2
-        if: ${{ github.event.workflow_run.conclusion == 'success' && startsWith(github.ref, 'refs/tags/') }}
